project-19-advanced-gitops-platform-with-argocd/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-service
  namespace: gitops-production

spec:

  selector:
    app: enterprise-app

  ports:

    - port: 80
      targetPort: 8080

  type: ClusterIP
